# capture-aribinb-chat

./: .gitignore  README.md  capture.py  pyproject.toml  requirements.txt
airbnb_capture/: __main__.py  cli.py  config.py  models.py  network.py  paths.py  tmp.py
airbnb_capture/browser/: cookies.py  factory.py
airbnb_capture/capture/: conversation.py  history.py  panels.py  stitcher.py
airbnb_capture/dom/: diagnostics.py  js.py  overlays.py  selectors.py
airbnb_capture/orchestration/: bulk.py  sequential.py
airbnb_capture/output/: banner.py  pdf.py  writer.py
reference/: working_source.py
