[project]
name = "airbnb-chat-capture"
version = "0.1.0"
description = "Capture stitched Airbnb conversation screenshots for evidence-oriented record keeping."
requires-python = ">=3.11"
dependencies = [
    "selenium>=4.27,<5",
    "webdriver-manager>=4.0,<5",
    "Pillow>=11,<13",
]

[project.scripts]
airbnb-capture = "airbnb_capture.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["airbnb_capture"]

[tool.hatch.build.targets.sdist]
include = [
    "airbnb_capture",
    "capture.py",
    "README.md",
    "requirements.txt",
    "reference/working_source.py",
]
